# Token.UI

frontend/: package-lock.json  package.json
token-manager/: Anchor.toml  package-lock.json  package.json
token-manager/migrations/: deploy.ts
token-manager/programs/token-manager/: Cargo.toml
token-manager/programs/token-manager/src/: lib.rs
token-manager/scripts/: deploy.js
token-manager/tests/: token-manager.ts
